Mon, Aug 27, 2007 Daniel R Fisher
1.  I revised the way that the free parameters are determined in the
    new class QMCThreeBodyJastrowParameters.  All of the parameters
    that are dependent due to cusp conditions are now excluded from the
    free parameter array, which should make optimization easier.

Sat, Aug 25, 2007 Daniel R Fisher
1.  I added three body Jastrow functions to the code.  They are
    identical to the function 'f' described in Physical Review B 70,
    235119 by the CASINO people.

Wed, Aug 20, 2007 Amos Anderson
1.  I added two new 2 particle Jastrow functions, based on the most
    recent publications from the CHAMP and CASINO people. They
    both work better than the Pade Jastrows. However, both are difficult
    to optimize.

2.  I added some performance metrics to the output.

3.  I also included numerous other small improvements and bug fixes.
    For example, there was a bug compelling the user to optimize both
    EE and EN Jastrows at the same time.

Mon, Jul 23, 2007 Amos Anderson
1.  I added an option, one_e_per_iter, which will allow you to move
    one electron at a time. I'm not completely sure I'm handling the
    green's function, reweighting, branching, etc correctly, but it
    might be ok.

2.  I added the energy minimization criteria, "generalized_eigenvector".
    It's a bit unstable at the moment (the optimization might be slow), but
    it's expected to be fairly efficient. That is, with the "Linearize"
    step length, it might converge your parameters in 1 or 2 optimization steps.

3.  In order to move one electron at a time, I programmed Array2D.h to use the
    special inverse update algorithm.

4.  Array2D.h is programmed to use the fortran bindings in LAPACK instead of
    the ATLAS bindings. This should make it more portable. This includes the
    generalized eigenvalue solver. Eventually, perhaps I'll use fortran bindings
    for BLAS as well, which will facilitate the use of alternative machines where